manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-gke-ingress-demo
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/app-protocols: '{"grpc":"HTTP2"}'
    cloud.google.com/backend-config: '{"ports": {"8443":"grpc-gke-ingress-demo"}}'
spec:
  type: ClusterIP
  selector:
    app: grpc-gke-ingress-demo
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
    name: grpc
