manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-gke-ingress-demo
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "grpc-gke-ingress-demo-vip"
    networking.gke.io/managed-certificates: "grpc-gke-ingress-demo"
spec:
  defaultBackend:
    service:
      name: grpc-gke-ingress-demo
      port:
        number: 8443
